# sot-memory-reader

./: .gitignore  Cargo.toml  readme.md  remove_json_signature.py
src/: main.rs
src/core/: mod.rs  reader.rs
src/entities/: actor.rs  ship.rs  world.rs
src/services/: event_loop.rs  mod.rs  sdk.rs
src/structs/: mod.rs  tarray.rs  unreal.rs
