[package]
name = "sot-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
log = "0.4.20"
sysinfo = "0.29.10"
toy-arms = { git = "https://github.com/pseuxide/toy-arms", features = [
    "external",
] }
